# the-new

./: .gitignore  CMakeLists.txt
AI/day1/: ai_day1_summary.md  day1.py
AI/day2/: ai_vector_model_day2.py  day2.md
AI/day3/: ai_day3_shape_summary.md  ai_matrix_preview_day3.py
AI/day4/: ai_day4_matrix_layer_summary.md  ai_first_layer_preview_day4.py
AI/day5/: ai_day5_feature_loss_preview.py  ai_day5_representation_to_loss_summary.md
AI/day6/: ai_day6_secection_ranking_summary.md  ai_day6_selection_ranking.py
AI/day7/: ai_day7_tensor_shape.py  ai_day7_tensor_shape_summary.md
Competitive_C++/: CSES_1621_Distinct_Numbers.cpp  CSES_Apple_Division.cpp  Creating_Strings_I.cpp  Missing_Number.cpp  Weird_Algorithm (CSES 1068).cpp  cses_1622_rewrite.cpp  day6_sorting.cpp  frequency_counter.cpp  recursion_trace.cpp
Competitive_C++/Log/: C++_Algorithm_Core_Week1.md  CSES1068_WeirdAlgorithm.md  CSES1083_MissingNumber.md  CSES_CreatingStringsI.md  apple_division_bug_log.md  bitmask_subset_trace.md  day5_competivities_bug_log.md  day6_bug_log.md  day6_note.md  (+2 more)
Linear_Algebra/: ai_matrix_preview.py  basis_redundancy_check_day4.py  matrix_order_day7.py  matrix_vector_transform_day5.py
Spacecraft_Structural_Understand/: day6_planner_ranking_reading.md  spacecraft_phase0_day2_orbit_env_trace.md  spacecraft_phase0_day4_90sec_explanation.md  spacecraft_phase0_day4_observation_action_flow.md  spacecraft_phase0_day5_closed_loop_rollout.md  spacecraft_phase0_week1_summary.md
engineering_ai_playground/: .gitignore  README.md  metrics.json  summarize_failures.py  test.py
(+51 files in other folders)
