cmake_minimum_required(VERSION 3.31)
project(c__)

set(CMAKE_CXX_STANDARD 20)

add_executable(c__ "Competitive_C++/Weird_Algorithm (CSES 1068).cpp"
        Competitive_C++/Missing_Number.cpp
        Engineering_C++/phase0/day1_cpp_reboot/print_vector.cpp
        Competitive_C++/recursion_trace.cpp
        "Competitive_C++/Creating_Strings_I.cpp"
        Engineering_C++/phase0/day2_dfs_reboot/dfs_skeleton.cpp
        Competitive_C++/cses_1622_rewrite.cpp
        Engineering_C++/phase0/day3_branching_dfs/branching_dfs_template.cpp
        Competitive_C++/CSES_Apple_Division.cpp
        Engineering_C++/phase0/day4_bitmask_abstraction/bitmask_helper.cpp
        Engineering_C++/phase0/day4_bitmask_abstraction/apple_division_refactored.cpp)
